--- a/main.ipynb
+++ b/main.ipynb
@@ -133,7 +133,7 @@
     "labels = ['Всего', 'Пропущено']\n",
     "\n",
     "plt.pie(data, labels=labels, colors=['lightgreen', 'red'], autopct='%1.1f%%', shadow=True, wedgeprops={'lw':1, 'ls':'--','edgecolor':\"k\"})\n",
-    "plt.axis('equal')  # Равные пропорции для круга\n",
+    "plt.axis('equal')\n",
     "plt.title('Доля пропущенных значений в стобце \"total_income\"')\n",
     "plt.show()"
    ]
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.4. Заполение пропусков данныз медианным значением:"
+    "1.4. Заполение пропусков данных медианным значением:"
    ]
   },
   {
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1157,7 @@
        "      <td>253875</td>\n",
        "      <td>покупка жилья</td>\n",
        "      <td>B</td>\n",
-       "      <td>покупка жилья</td>\n",
+       "      <td>операции с недвижимостью</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1172,7 +1172,7 @@
        "      <td>86954</td>\n",
        "      <td>операции с коммерческой недвижимостью</td>\n",
        "      <td>C</td>\n",
-       "      <td>операции с коммерческой недвижимостью</td>\n",
+       "      <td>операции с недвижимостью</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1187,7 +1187,7 @@
        "      <td>145017</td>\n",
        "      <td>сыграть свадьбу</td>\n",
        "      <td>C</td>\n",
-       "      <td>сыграть свадьбу</td>\n",
+       "      <td>проведение свадьбы</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1202,7 +1202,7 @@
        "      <td>59702</td>\n",
        "      <td>операции с жильем</td>\n",
        "      <td>C</td>\n",
-       "      <td>операции с жильем</td>\n",
+       "      <td>операции с недвижимостью</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1217,7 +1217,7 @@
        "      <td>120133</td>\n",
        "      <td>на проведение свадьбы</td>\n",
        "      <td>C</td>\n",
-       "      <td>на проведение свадьбы</td>\n",
+       "      <td>проведение свадьбы</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1247,7 +1247,7 @@
        "      <td>152595</td>\n",
        "      <td>на проведение свадьбы</td>\n",
        "      <td>C</td>\n",
-       "      <td>на проведение свадьбы</td>\n",
+       "      <td>проведение свадьбы</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>163</th>\n",
@@ -1262,7 +1262,7 @@
        "      <td>213192</td>\n",
        "      <td>строительство недвижимости</td>\n",
        "      <td>B</td>\n",
-       "      <td>строительство недвижимости</td>\n",
+       "      <td>операции с недвижимостью</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>164</th>\n",
@@ -1277,7 +1277,7 @@
        "      <td>295156</td>\n",
        "      <td>на проведение свадьбы</td>\n",
        "      <td>B</td>\n",
-       "      <td>на проведение свадьбы</td>\n",
+       "      <td>проведение свадьбы</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>165</th>\n",
@@ -1292,7 +1292,7 @@
        "      <td>145017</td>\n",
        "      <td>свадьба</td>\n",
        "      <td>C</td>\n",
-       "      <td>свадьба</td>\n",
+       "      <td>проведение свадьбы</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>166</th>\n",
@@ -1307,7 +1307,7 @@
        "      <td>440470</td>\n",
        "      <td>на покупку автомобиля</td>\n",
        "      <td>B</td>\n",
-       "      <td>на покупку автомобиля</td>\n",
+       "      <td>операции с автомобилем</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1354,23 +1354,23 @@
        "165                                свадьба                     C   \n",
        "166                  на покупку автомобиля                     B   \n",
        "\n",
-       "                          purpose_category  \n",
-       "0                            покупка жилья  \n",
-       "1    операции с коммерческой недвижимостью  \n",
-       "2                          сыграть свадьбу  \n",
-       "3                        операции с жильем  \n",
-       "4                    на проведение свадьбы  \n",
-       "..                                     ...  \n",
-       "162                  на проведение свадьбы  \n",
-       "163             строительство недвижимости  \n",
-       "164                  на проведение свадьбы  \n",
-       "165                                свадьба  \n",
-       "166                  на покупку автомобиля  \n",
+       "             purpose_category  \n",
+       "0    операции с недвижимостью  \n",
+       "1    операции с недвижимостью  \n",
+       "2          проведение свадьбы  \n",
+       "3    операции с недвижимостью  \n",
+       "4          проведение свадьбы  \n",
+       "..                        ...  \n",
+       "162        проведение свадьбы  \n",
+       "163  операции с недвижимостью  \n",
+       "164        проведение свадьбы  \n",
+       "165        проведение свадьбы  \n",
+       "166    операции с автомобилем  \n",
        "\n",
        "[167 rows x 12 columns]"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,17 +1381,54 @@
     "for column, series in df.items():\n",
     "    if column == 'purpose_category':\n",
     "        for i in range(len(series)):\n",
-    "            if series[i].__contains__('жиль'):\n",
+    "            if series[i].__contains__('жиль') or series[i].__contains__('недвиж'):\n",
     "                df.at[i, column] = 'операции с недвижимостью'\n",
-    "            elif series[i] <= 50000:\n",
-    "                df.at[i, column] = 'D'\n",
-    "            elif series[i] <= 200000:\n",
-    "                df.at[i, column] = 'C'\n",
-    "            elif series[i] <= 1000000:\n",
-    "                df.at[i, column] = 'B'\n",
-    "            else:\n",
-    "                df.at[i, column] = 'A'\n",
+    "            elif series[i].__contains__('авто'):\n",
+    "                df.at[i, column] = 'операции с автомобилем'\n",
+    "            elif series[i].__contains__('свадь'):\n",
+    "                df.at[i, column] = 'проведение свадьбы'\n",
+    "            elif series[i].__contains__('образ'):\n",
+    "                df.at[i, column] = 'получение образования'\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Шаг 3.</b> Ответить на вопросы:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<li><b>Есть ли зависимость между количеством детей и возвратом кредита в срок?</b></li>\n",
+    "\n",
+    "Да, ведь платежеспособность также зависит от затрат на детей, их содержание.\n",
+    "<li><b>Есть ли зависимость между семейным положением и возвратом кредита в срок?</b></li>\n",
+    "\n",
+    "Есть. Например, женатые или состоящие в зарегистрированных партнерствах заемщики обычно демонстрируют более низкий уровень просрочек по сравнению с неженатыми или разведенными. Это может быть связано с большей стабильностью семейных отношений и обязательств перед семьей. \n",
+    "<li><b>Есть ли зависимость между уровнем дохода и возвратом кредита в срок?</b></li>\n",
+    "\n",
+    "Да, существует. Обычно люди с более высоким уровнем дохода имеют меньшую вероятность просрочки по кредиту, в то время как заемщики с низким доходом чаще сталкиваются с проблемами во время погашения задолженности.\n",
+    "\n",
+    "<li><b>Как разные цели кредита влияют на его возврат в срок?</b></li>\n",
+    "Да. Некоторые исследования показывают, что заемщики, берущие кредит для инвестиций или образования, обычно более ответственны в своих финансовых обязательствах и имеют более высокий уровень возврата, в то время как кредиты на потребительские цели могут иметь более высокую вероятность просрочки из-за более неопределенных финансовых целей и природы расходов.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Шаг 4.</b> Общий вывод."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В ходе лабораторной работы были проведены манипуляции с DataFrame'ом, который характеризует статистику о платёжеспособности клиентов. Были исправлены аномалии, удалены дубликаты, заполнены пропуски. Разбили некоторые данные на категории для более удобного ориентирования."
    ]
   }
  ],
