--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "0"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "[21525 rows x 12 columns]"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "0"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
        "Name: total_income, Length: 21525, dtype: int32"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,18 +550,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 232,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>children</th>\n",
+       "      <th>days_employed</th>\n",
+       "      <th>dob_years</th>\n",
+       "      <th>education</th>\n",
+       "      <th>education_id</th>\n",
+       "      <th>family_status</th>\n",
+       "      <th>family_status_id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>income_type</th>\n",
+       "      <th>debt</th>\n",
+       "      <th>total_income</th>\n",
+       "      <th>purpose</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>8437.673028</td>\n",
+       "      <td>42</td>\n",
+       "      <td>высшее</td>\n",
+       "      <td>0</td>\n",
+       "      <td>женат / замужем</td>\n",
+       "      <td>0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>сотрудник</td>\n",
+       "      <td>0</td>\n",
+       "      <td>253875</td>\n",
+       "      <td>покупка жилья</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4024.803754</td>\n",
+       "      <td>36</td>\n",
+       "      <td>среднее</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>сотрудник</td>\n",
+       "      <td>0</td>\n",
+       "      <td>112080</td>\n",
+       "      <td>приобретение автомобиля</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5623.422610</td>\n",
+       "      <td>33</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>сотрудник</td>\n",
+       "      <td>0</td>\n",
+       "      <td>145885</td>\n",
+       "      <td>покупка жилья</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4124.747207</td>\n",
+       "      <td>32</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>сотрудник</td>\n",
+       "      <td>0</td>\n",
+       "      <td>267628</td>\n",
+       "      <td>дополнительное образование</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>340266.072047</td>\n",
+       "      <td>53</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>гражданский брак</td>\n",
+       "      <td>1</td>\n",
+       "      <td>F</td>\n",
+       "      <td>пенсионер</td>\n",
+       "      <td>0</td>\n",
+       "      <td>158616</td>\n",
+       "      <td>сыграть свадьбу</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21520</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4529.316663</td>\n",
+       "      <td>43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>F</td>\n",
+       "      <td>компаньон</td>\n",
+       "      <td>0</td>\n",
+       "      <td>224791</td>\n",
+       "      <td>операции с жильем</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21521</th>\n",
+       "      <td>0</td>\n",
+       "      <td>343937.404131</td>\n",
+       "      <td>67</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>пенсионер</td>\n",
+       "      <td>0</td>\n",
+       "      <td>155999</td>\n",
+       "      <td>сделка с автомобилем</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21522</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2113.346888</td>\n",
+       "      <td>38</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>сотрудник</td>\n",
+       "      <td>1</td>\n",
+       "      <td>89672</td>\n",
+       "      <td>недвижимость</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21523</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3112.481705</td>\n",
+       "      <td>38</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>сотрудник</td>\n",
+       "      <td>1</td>\n",
+       "      <td>244093</td>\n",
+       "      <td>на покупку своего автомобиля</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21524</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1984.507589</td>\n",
+       "      <td>40</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>сотрудник</td>\n",
+       "      <td>0</td>\n",
+       "      <td>82047</td>\n",
+       "      <td>на покупку автомобиля</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>21525 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       children  days_employed  dob_years education  education_id  \\\n",
+       "0             1    8437.673028         42    высшее             0   \n",
+       "1             1    4024.803754         36   среднее             1   \n",
+       "2             0    5623.422610         33       NaN             1   \n",
+       "3             3    4124.747207         32       NaN             1   \n",
+       "4             0  340266.072047         53       NaN             1   \n",
+       "...         ...            ...        ...       ...           ...   \n",
+       "21520         1    4529.316663         43       NaN             1   \n",
+       "21521         0  343937.404131         67       NaN             1   \n",
+       "21522         1    2113.346888         38       NaN             1   \n",
+       "21523         3    3112.481705         38       NaN             1   \n",
+       "21524         2    1984.507589         40       NaN             1   \n",
+       "\n",
+       "          family_status  family_status_id gender income_type  debt  \\\n",
+       "0       женат / замужем                 0      F   сотрудник     0   \n",
+       "1                   NaN                 0      F   сотрудник     0   \n",
+       "2                   NaN                 0      M   сотрудник     0   \n",
+       "3                   NaN                 0      M   сотрудник     0   \n",
+       "4      гражданский брак                 1      F   пенсионер     0   \n",
+       "...                 ...               ...    ...         ...   ...   \n",
+       "21520               NaN                 1      F   компаньон     0   \n",
+       "21521               NaN                 0      F   пенсионер     0   \n",
+       "21522               NaN                 1      M   сотрудник     1   \n",
+       "21523               NaN                 0      M   сотрудник     1   \n",
+       "21524               NaN                 0      F   сотрудник     0   \n",
+       "\n",
+       "       total_income                       purpose  \n",
+       "0            253875                 покупка жилья  \n",
+       "1            112080       приобретение автомобиля  \n",
+       "2            145885                 покупка жилья  \n",
+       "3            267628    дополнительное образование  \n",
+       "4            158616               сыграть свадьбу  \n",
+       "...             ...                           ...  \n",
+       "21520        224791             операции с жильем  \n",
+       "21521        155999          сделка с автомобилем  \n",
+       "21522         89672                  недвижимость  \n",
+       "21523        244093  на покупку своего автомобиля  \n",
+       "21524         82047         на покупку автомобиля  \n",
+       "\n",
+       "[21525 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from collections import Counter\n",
-    "\n",
     "for column, series in df.items():\n",
     "    if pd.api.types.is_string_dtype(series):\n",
     "        if column == 'gender' or column == 'income_type' or column == 'purpose':\n",
     "            continue\n",
     "        df[column] = df[column].str.lower()\n",
-    "        df[column] = df[column].drop_duplicates()"
+    "        df[column] = df[column].drop_duplicates()\n",
+    "\n",
+    "df"
    ]
   },
   {
@@ -582,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +1064,7 @@
        "[167 rows x 10 columns]"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1332,7 @@
        "[167 rows x 11 columns]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1624,7 @@
        "[167 rows x 12 columns]"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
